# lib/db/src/schema/index.ts
@@ -38,10 +38,12 @@ export const invoicesTable = pgTable("invoices", {
   vendorName: text("vendor_name"),
   contractPONumber: text("contract_po_number"),
   fiscalPONumber: text("fiscal_po_number"),
+  receiptId: text("receipt_id"),
   voucherID: text("voucher_id"),
   warrantNumber: text("warrant_number"),
   warrantDate: text("warrant_date"),
   approvalDate: text("approval_date"),
+  approvalManager: text("approval_manager"),
   staffName: text("staff_name"),
   supervisor: text("supervisor"),
   unit: text("unit"),
